--- a/FuncSprint/FuncSprint.csproj
+++ b/FuncSprint/FuncSprint.csproj
@@ -7,4 +7,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="6.12.2" />
+    <PackageReference Include="NUnit" Version="4.2.2" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
+  </ItemGroup>
+    <ItemGroup>
+	    <InternalsVisibleTo Include="FuncTests" />
+    </ItemGroup>
+
 </Project>
